# psspectral

./: Cargo.toml  README.md
src/: heat1d.rs  main.rs  utils.rs
